SERVER-99690 Fix CBR segfault for queries over clustered collections (#31642)

GitOrigin-RevId: 4ce1eef09f750fa01edd1f766697f394a7956f0f